--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.0",
+        "body-scroll-lock": "^3.1.5",
         "express": "^4.17.1",
         "node-sass": "^5.0.0",
         "react": "^17.0.1",
