--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-pdf": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "react-share": "^4.4.0",
         "web-vitals": "^1.1.0"
     },
     "scripts": {
