added photoshopped images for featured projects

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "Jason Yata",
-    "name": "Jason Yata Development",
+    "name": "Jason Yata",
     "icons": [
         {
             "src": "favicon.ico",
