all projects mockups added and render properly

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "react-share": "^4.4.0",
+        "simple-react-lightbox": "^3.6.3",
         "web-vitals": "^1.1.0"
     },
     "scripts": {
