--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.0",
         "body-scroll-lock": "^3.1.5",
+        "contentful": "^8.2.0",
         "node-sass": "^5.0.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
+        "react-markdown": "^5.0.3",
         "react-pdf": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
