--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -4,7 +4,7 @@
         "title": "Orange County Plastic Surgery",
         "routeName": "ocps",
         "website": "orangecountyplasticsurgery.com",
-        "bio": "Orange County Plastic Surgery was looking to improve the aesthetic and user experience of their website and boost their SEO around Southern California. During the creation of their website I was responsible for building the landing, procedures, photos, and before & after patient photos pages, all translated via wireframe. The tech we used included Javascript (ES6), HTML, CSS, and jQuery. Since we needed a place to store thousands of photos, I decided to use Contentful as a headless CMS and was responsible for the set up and input of all patients' photos and content, as well as creating the functions to fetch the data and dynamically create individual pages. After the completion and approval of their new site, I used Amazon Web Services for hosting and integrated a chat service, ApexChat.",
+        "bio": "Orange County Plastic Surgery was looking to improve the aesthetic and user experience of their website and boost their SEO around Southern California. During the creation of their website I was responsible for building the landing page, procedures, photos, and before & after patient photos pages, all translated via wireframes. The tech we used included Javascript (ES6), HTML, CSS, and jQuery. Since we needed a place to store thousands of photos, I decided to use Contentful as a headless CMS and was responsible for the set up and input of all patients' photos and content, as well as creating the functions to fetch the data and dynamically create individual pages. After the completion and approval of their new site, I used Amazon Web Services for hosting and integrated a chat service, ApexChat.",
         "deliverables": [
             {
                 "title": "Javascript (ES6)"
@@ -49,7 +49,7 @@
         "title": "Huntington Digital",
         "routeName": "huntingtondigital",
         "website": "huntingtondigitaloc.com",
-        "bio": "This was a complete rebrand of Huntington Digital's online presence and logo. Their website was very generic and wanted something that better encapsulated their business style and culture. We decided to go with a darker theme with aggressive, red highlights and bright colors throughout with smoooth loading/scroll animations on each section. I was responsible for coding the landing, services, and contact pages from our designer's wireframes with a mobile-first approach. I used PHPMailer to handle the contact form's POST requests. The tech used were Javascript, jQuery, HTML5, CSS3, PHPMailer, and SwiperJS.",
+        "bio": "This was a complete rebrand of Huntington Digital's online presence and logo. Their website was very generic and wanted something that better encapsulated their business style and culture. We decided to go with a darker theme with aggressive, red highlights and bright colors throughout with smooth loading/scroll animations on each section. I was responsible for coding the landing, services, and contact pages from our designer's wireframes with a mobile-first approach. I used PHPMailer to handle the contact form's POST requests. The tech used were Javascript, jQuery, HTML5, CSS3, PHPMailer, and SwiperJS.",
         "deliverables": [
             {
                 "title": "Javascript (ES6)"
@@ -214,7 +214,7 @@
         "title": "TravelWell",
         "routeName": "travelwell",
         "website": "travelwell-gatsby.netlify.app",
-        "bio": "Live free, travel well. I wanted to better learn Gatsby so I decided to make a mock travel website. I created all pages and made sure every component was as reusable as possible. Dynamic routing and page creation is handled to render different tour pages and blog posts, and all image loading is performed with GraphQL querying. Contentful is the headless CMS used to hold all tour and blog data, and CSS is handled by Styled Components. The tech used includes Gatsby, GraphQL, Styled Components, and Contentful API. This was a fun project and really helped my working knowledge of Gatsby and React.",
+        "bio": "Live free, travel well. I wanted to better learn Gatsby so I decided to make a mock travel website. I created all pages and made sure every component was as reusable as possible. Dynamic routing and page creation is handled to render different tour pages and blog posts, and all image loading is performed with GraphQL querying. Contentful is the headless CMS used to hold all tour and blog data, and CSS is handled by Styled Components. The tech used includes Gatsby, GraphQL, Styled Components, and Contentful API. This was a fun project and really helped my working knowledge of Gatsby and GraphQL.",
         "deliverables": [
             {
                 "title": "Gatsby"
