--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.0",
+        "axios": "^0.21.1",
         "body-scroll-lock": "^3.1.5",
         "contentful": "^8.2.0",
         "node-sass": "^5.0.0",
@@ -17,9 +18,13 @@
         "react-helmet": "^6.1.0",
         "react-markdown": "^5.0.3",
         "react-pdf": "^5.2.0",
+        "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "react-share": "^4.4.0",
+        "redux": "^4.0.5",
+        "redux-logger": "^3.0.6",
+        "redux-promise": "^0.6.0",
         "simple-react-lightbox": "^3.6.3",
         "web-vitals": "^1.1.0"
     },
